Removed real topic

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -39,10 +39,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section data-background-image="branding/title.jpg">
-					<h1>KISS with HEXO</h1>
-					<h3></h3>
+					<h1>Your Topic</h1>
+					<h3>Your description</h3>
 					<p>
-						<small>Senior JavaScript Developer @ <a href="http://hakim.se">DataArt</a>.</small>
+						<small>You @ <a href="http://your_company">Company</a>.</small>
 					</p>
 					<img class="plain-img" src="branding/logo.svg" alt="logo">
 				</section>
