--- a/presentation/index.html
+++ b/presentation/index.html
@@ -42,9 +42,9 @@
 					<h1>Your Topic</h1>
 					<h3>Your description</h3>
 					<p>
-						<small>You @ <a href="http://your_company">Company</a>.</small>
+						<small><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></small>
 					</p>
-					<img class="plain-img" src="branding/logo.svg" alt="logo">
+					<img class="plain-img" width="100" src="branding/logo.svg" alt="logo">
 				</section>
 
 				<section>
